# cmake-using

test1/: CMakeLists.txt
test1/src/: CMakeLists.txt  main.cpp
test2/lib/: CMakeLists.txt  hello.cpp
test3/src/: CMakeLists.txt  main.cpp
